// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c15 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c15:after {
  content: "";
  clear: both;
  display: table;
}

.c18 {
  padding-left: 10px;
}

.c14 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c17 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c16 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c13 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c12 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c15 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.S9 {
  line-height: 17px;
}

.S10 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-15d164r S2"
        >
          <div
            className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c3 css-text-76zvg2 r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
        >
          Some Headline
        </h1>
        <div
          className="c4 responsiveweb__FlagsContainer-sc-1nipn43-1 c4 css-view-1dbjc4n"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c5 css-text-76zvg2 r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomColor-91l5k4 r-borderBottomWidth-qklmqi r-borderTopColor-1ozwgwe r-borderTopWidth-5kkj8d r-marginBottom-117bsoe r-marginHorizontal-vlx1xi r-paddingBottom-1mi0q7o r-paddingTop-m611by S8"
    >
      <div
        className="c7 responsiveweb__MetaContainer-sc-1nipn43-6 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1nipn43-7 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__SaveShareContainer-sc-1exejum-3 c11 css-view-1dbjc4n"
    >
      <div
        className="c12 responsiveweb__SaveShareRefContainer-sc-1exejum-4 c12 css-view-1dbjc4n"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c13 responsiveweb__BodyContainer-sc-1exejum-2 c13 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c15"
      >
        Some content
      </p>
      <div
        className="c16 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c16 css-view-1dbjc4n"
      >
        <div
          className="c17 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c17 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c18 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c18 css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n r-paddingTop-m611by S10"
                >
                  <div
                    className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S9"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c19 responsiveweb__SecondaryImg-sc-16nqyj8-6 c19 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c20 responsiveweb__InlineImg-sc-16nqyj8-7 c20 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the culture magazine 1`] = `
.c15 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c15:after {
  content: "";
  clear: both;
  display: table;
}

.c18 {
  padding-left: 10px;
}

.c14 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c17 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c16 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c13 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c12 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c15 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.S9 {
  line-height: 17px;
}

.S10 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Flama-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-15d164r S2"
        >
          <div
            className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c3 css-text-76zvg2 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
        >
          Some Headline
        </h1>
        <div
          className="c4 responsiveweb__FlagsContainer-sc-1nipn43-1 c4 css-view-1dbjc4n"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c5 css-text-76zvg2 r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomColor-91l5k4 r-borderBottomWidth-qklmqi r-borderTopColor-1ozwgwe r-borderTopWidth-5kkj8d r-marginBottom-117bsoe r-marginHorizontal-vlx1xi r-paddingBottom-1mi0q7o r-paddingTop-m611by S8"
    >
      <div
        className="c7 responsiveweb__MetaContainer-sc-1nipn43-6 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1nipn43-7 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__SaveShareContainer-sc-1exejum-3 c11 css-view-1dbjc4n"
    >
      <div
        className="c12 responsiveweb__SaveShareRefContainer-sc-1exejum-4 c12 css-view-1dbjc4n"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c13 responsiveweb__BodyContainer-sc-1exejum-2 c13 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c15"
      >
        Some content
      </p>
      <div
        className="c16 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c16 css-view-1dbjc4n"
      >
        <div
          className="c17 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c17 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c18 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c18 css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n r-paddingTop-m611by S10"
                >
                  <div
                    className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S9"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c19 responsiveweb__SecondaryImg-sc-16nqyj8-6 c19 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c20 responsiveweb__InlineImg-sc-16nqyj8-7 c20 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the style magazine 1`] = `
.c15 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c15:after {
  content: "";
  clear: both;
  display: table;
}

.c18 {
  padding-left: 10px;
}

.c14 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c17 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c16 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c13 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c12 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c15 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.S9 {
  line-height: 17px;
}

.S10 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: CenturyGothic-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-15d164r S2"
        >
          <div
            className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c3 css-text-76zvg2 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
        >
          Some Headline
        </h1>
        <div
          className="c4 responsiveweb__FlagsContainer-sc-1nipn43-1 c4 css-view-1dbjc4n"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c5 css-text-76zvg2 r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomColor-91l5k4 r-borderBottomWidth-qklmqi r-borderTopColor-1ozwgwe r-borderTopWidth-5kkj8d r-marginBottom-117bsoe r-marginHorizontal-vlx1xi r-paddingBottom-1mi0q7o r-paddingTop-m611by S8"
    >
      <div
        className="c7 responsiveweb__MetaContainer-sc-1nipn43-6 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1nipn43-7 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__SaveShareContainer-sc-1exejum-3 c11 css-view-1dbjc4n"
    >
      <div
        className="c12 responsiveweb__SaveShareRefContainer-sc-1exejum-4 c12 css-view-1dbjc4n"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c13 responsiveweb__BodyContainer-sc-1exejum-2 c13 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c15"
      >
        Some content
      </p>
      <div
        className="c16 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c16 css-view-1dbjc4n"
      >
        <div
          className="c17 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c17 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c18 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c18 css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n r-paddingTop-m611by S10"
                >
                  <div
                    className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S9"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c19 responsiveweb__SecondaryImg-sc-16nqyj8-6 c19 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c20 responsiveweb__InlineImg-sc-16nqyj8-7 c20 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c15 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c15:after {
  content: "";
  clear: both;
  display: table;
}

.c18 {
  padding-left: 10px;
}

.c14 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c17 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c16 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c13 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c12 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c15 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c14 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.S9 {
  line-height: 17px;
}

.S10 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  height: 100%;
  width: 100%;
}

.IS8 {
  position: relative;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS11 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS12 {
  margin: 0;
}

.IS13 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-15d164r S2"
        >
          <div
            className="css-text-76zvg2 r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-3b040n r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c3 css-text-76zvg2 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
        >
          Some Headline
        </h1>
        <div
          className="c4 responsiveweb__FlagsContainer-sc-1nipn43-1 c4 css-view-1dbjc4n"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c5 css-text-76zvg2 r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 responsiveweb__HeaderContainer-sc-1nipn43-2 c2 css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomColor-91l5k4 r-borderBottomWidth-qklmqi r-borderTopColor-1ozwgwe r-borderTopWidth-5kkj8d r-marginBottom-117bsoe r-marginHorizontal-vlx1xi r-paddingBottom-1mi0q7o r-paddingTop-m611by S8"
    >
      <div
        className="c7 responsiveweb__MetaContainer-sc-1nipn43-6 c7 css-view-1dbjc4n"
      >
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 responsiveweb__Separator-sc-1nipn43-7 c9 css-view-1dbjc4n"
        />
        <div
          className="c8 responsiveweb__Meta-sc-1nipn43-5 c8 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
        >
          <div
            className="c10 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c10 css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 responsiveweb__SaveShareContainer-sc-1exejum-3 c11 css-view-1dbjc4n"
    >
      <div
        className="c12 responsiveweb__SaveShareRefContainer-sc-1exejum-4 c12 css-view-1dbjc4n"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c13 responsiveweb__BodyContainer-sc-1exejum-2 c13 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c15"
      >
        Some content
      </p>
      <div
        className="c16 responsiveweb__PullQuoteContainer-sc-16nqyj8-9 c16 css-view-1dbjc4n"
      >
        <div
          className="c17 responsiveweb__PullQuoteResp-sc-16nqyj8-8 c17 css-view-1dbjc4n"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c14 responsiveweb__PrimaryImg-sc-16nqyj8-5 c14 css-view-1dbjc4n"
      >
        <figure
          className="IS12"
        >
          <div
            className="css-view-1dbjc4n IS11"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <div
                className="IS9"
              >
                <div
                  className="IS8"
                >
                  <video
                    className="video-js IS7"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c18 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c18 css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n r-paddingTop-m611by S10"
                >
                  <div
                    className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S9"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS13"
      />
      <div>
        <div
          className="c19 responsiveweb__SecondaryImg-sc-16nqyj8-6 c19 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c20 responsiveweb__InlineImg-sc-16nqyj8-7 c20 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;
